Add initial attempt at github actions CI